Version 1.3.13
 Fixed:
  - Prefix Import feature is not working as expected [BUG-156];

Version 1.3.12
 Updated:
  - Afrikaans translation;
  - Japanese translation;
  - Ukrainian translation;
  - Russian translation;
  - Traditional Chinese translation;
  - German translation;
 Add:
  - Add an option to show / hide "Args" parameter [BUG-114];
  - Generate StartupWMClass values in created .desktop files [BUG-153];
  - Added a feature to keep the terminal open when running winetricks so users can see the output.
 Fixed:
  - Fix parsing of env causing issues with wine kill [BUG-143];
  - Error: wrong or broken XML data. Try again later. [BUG-146];
  - Fixed a bug where /etc/mtab was not being read and resulted in being unable to unmount iso images.
  - Fixed a bug where the temporary director for generating icons wasn't being deleted. Refactored this to use QTemporaryDir.
  - Added workaround for st terminal, similar to konsole.
  - Fixed warnings: Qt deprecated function useage;
  - Fixed warnings: use of old-style cast

Version 1.3.11
 Fixed:
  - Display of Valve Proton in Processes view [BUG-138];
  - Improve all dialogs of choosing files [BUG-139];
  - Allow Stop Wine action to kill Valve Proton in Processes view [BUG-138];
 Updated:
  - Code cleanup: drop Qt4 support;

Version 1.3.10
 Fixed:
  - cppcheck: Uninitialized struct member: item.provider_id;

 Add:
  - cleanup.sh: to get rid of all non-release stuff;

Version 1.3.9
 Fixed:
  - Fixed build with Qt >= 5.11 [BUG-125];
  - Error: wrong or broken XML data. Try again later. [BUG-132]

 Added:
  - Custom virtual desktop resolution size [BUG-131];

Version 1.3.8
 Updated:
  - gui_sudo missing in Ubuntu 18.04 [BUG-120];

 Fixed:
  - winetricks: Proxy settings are used even if proxy type set to 'none';

Version 1.3.7
 Updated:
  - Wine stock icons to be organised through Q4Wine [BUG-117];
  - Add gnome-terminal into terminal detection logic [BUG-118];
 Added:
  - French translation (thx 2 seigneurfuo);
