@@ -1,6 +1,7 @@
 Version 1.3.13
  Fixed:
   - Prefix Import feature is not working as expected [BUG-156];
+  - Misspelled Color Theme Settings [BUG-155];
 
 Version 1.3.12
  Updated:
